Fixed small screen overlap, added twitter link

--- a/styles/index.css
+++ b/styles/index.css
@@ -234,7 +234,7 @@ body {
   opacity: 1;
   transition: opacity 2s;
   object-fit: scale-down;
-  max-height: min(335px, -40px + 85vw);
+  max-height: min(335px, -40px + 75vw);
   user-select: none;
 }
 
